--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <section id="symptoms">
 <h2>Chicken lash egg symptoms and related warning signs</h2>
-<p>Recognizing lash egg symptoms early improves the chances of successful intervention. Hens with reproductive tract inflammation often display a constellation of behavioral and physical changes that signal distress. While some signs overlap with other conditions such as egg binding or internal laying, the presence of multiple symptoms warrants immediate attention.</p>
+<p>Recognizing lash egg symptoms early improves the chances of successful intervention. Hens with reproductive tract inflammation often display a constellation of behavioral and physical changes that signal distress. While some signs overlap with other conditions such as egg binding or internal laying, <a href="https://orbits-spins.ca/">Orbit Spins No Deposit</a> the presence of multiple symptoms warrants immediate attention.</p>
 
 <h3>Common behavioral and physical signs</h3>
 <p>Affected hens frequently exhibit lethargy, spending more time sitting or standing still with fluffed feathers. Reduced appetite and decreased water intake are common, as the bird diverts energy toward managing internal inflammation. Straining or tail pumping—repeated contractions of the abdomen—may occur as the hen attempts to expel material from the reproductive tract. A penguin-like stance, with the body held upright and the tail down, often indicates abdominal discomfort or pressure.</p>
